--- a/assets/components/_contact.scss
+++ b/assets/components/_contact.scss
@@ -1,6 +1,5 @@
 .contact {
   @extend .projects;
-  overflow-y: hidden;
   &__container {
     position: relative;
     top: 35px;
