--- a/assets/components/_desktop.scss
+++ b/assets/components/_desktop.scss
@@ -1,4 +1,14 @@
 @media only screen and (min-width: 1300px) {
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+  ::-webkit-scrollbar-track {
+    background: $light-grey;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: $blue;
+    border-radius: 20px;
+  }
   span {
     font-size: 1.7rem;
   }
