--- a/assets/components/_home.scss
+++ b/assets/components/_home.scss
@@ -6,7 +6,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  transition: opacity 0.5s ease-in-out;
+  animation: fadeIn 0.4s ease-in-out;
   .presentation {
     position: relative;
     display: flex;
