--- a/assets/components/_projects.scss
+++ b/assets/components/_projects.scss
@@ -2,7 +2,6 @@
   @include section;
   flex-direction: column;
   height: auto;
-  // overflow-y: scroll;
   &__container {
     position: relative;
     top: 50px;
@@ -45,8 +44,8 @@
     justify-content: flex-start;
   }
   &__image {
-    width: 300px;
-    height: 180px;
+    width: 275px;
+    height: 165px;
     border-radius: 12px;
     margin: 18px auto;
   }
