--- a/assets/components/_tablet.scss
+++ b/assets/components/_tablet.scss
@@ -101,6 +101,6 @@
 
 @media only screen and (min-height: 1000px) {
   .head {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
 }
